# thuai-9

./: .gitignore  AUDIT-2026-05-29.md  CHANGE_SUMMARY.md  README.md  agent-web-k-api-sdk-snug-dragonfly.md
.github/workflows/: build.yml
docs/: rule.md
docs/api/: websocket-protocol.md
docs/sdk/: contestant-sdk.md
docs/web/: frontend-display.md
sdk-cpp/: README.md  xmake.lua
sdk-cpp/src/: agent.hpp  logic.cpp  logic.hpp  main.cpp  models.hpp  protocol.hpp
sdk-cpp/tests/: protocol_tests.cpp
sdk-python/: Dockerfile  README.md  main.py  pyproject.toml
sdk-python/examples/: demo_agents.py
sdk-python/sdk_python/: agent.py  message.py  models.py
sdk-python/tests/: test_protocol.py
server/: Dockerfile  Makefile  README.md  server.sln
server/config/: config.json
server/data/: result.json
server/src/thuai/: Program.cs  thuai.csproj
server/test/: README.md
thuai-9-server/: .env.example  .gitignore  docker-compose.yml
thuai-9-server/evaluator/: Dockerfile  compiler.py  config.py  main.py  requirements.txt  runner.py
thuai-9-server/nginx/: nginx.conf
thuai-9-server/portal/: app.css  app.js  index.html
thuai-9-server/submission-api/: Dockerfile  requirements.txt
web/: Dockerfile  LAYOUT.md  README.md  index.html  layout.css  package-lock.json  package.json  server.js  styles.css
web/assets/: README.md
web/src/: actions.js  appearance.js  candles.js  connection.js  main.js  observer-status.js  render.js  sample-data.js  store.js
web/tests/: candles.test.mjs  identity.test.mjs  observer-status.test.mjs  run.mjs  runtime-reset.test.mjs
(+60 files in other folders)
