[project]
name = "sdk-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["websockets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdk_python"]

[dependency-groups]
dev = ["pytest", "pytest-subtests"]

[tool.pytest.ini_options]
# The SDK is imported as `sdk_python` from the repo root, so the project
# directory must be on sys.path for the test suite to resolve it.
pythonpath = ["."]

[tool.isort]
profile = "black"
